project(Cosmo2)

SET(Cosmo2_LIBS)
IF(VTK_USE_MPI)
  IF(MPI_EXTRA_LIBRARY)
    SET(Cosmo2_LIBS ${MPI_LIBRARY} ${MPI_EXTRA_LIBRARY})
  ELSE(MPI_EXTRA_LIBRARY)
    SET(Cosmo2_LIBS ${MPI_LIBRARY})
  ENDIF(MPI_EXTRA_LIBRARY)
ELSE(VTK_USE_MPI)
  ADD_DEFINITIONS("-DUSE_SERIAL_COSMO")
ENDIF(VTK_USE_MPI)
# Needed for mpich 2
ADD_DEFINITIONS("-DMPICH_IGNORE_CXX_SEEK")

SET(Cosmo2_SOURCES
  TipsyParticleDistribute.cxx
)

INCLUDE_DIRECTORIES (
  ${PROJECT_SOURCE_DIR} 
  ${PROJECT_BINARY_DIR}
)

ADD_LIBRARY(Cosmo2 STATIC ${Cosmo2_SOURCES})
TARGET_LINK_LIBRARIES(Cosmo2 TipsyLib ${Cosmo2_LIBS} Cosmo)
# Make sure static lib can be linked into dynamic one
IF(BUILD_SHARED_LIBS AND NOT WIN32)
  SET_TARGET_PROPERTIES( Cosmo2 PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF(BUILD_SHARED_LIBS AND NOT WIN32)
